# screen

./: .gitignore  README.md  config.toml  ili9488_display.py  ili9488_probe.py  pyproject.toml
.claude/: settings.local.json
screan/: __init__.py  __main__.py  app.py  config.py
screan/collect/: sampler.py  sources.py  state.py
screan/driver/: colorconv.py  ili9488.py
screan/render/: compositor.py  surface.py  theme.py
screan/util/: anim.py  log.py  rect.py  sdnotify.py
screan/widgets/: _draw.py  _weather_icons.py  base.py  clock.py  cpu.py  disk.py  host.py  image.py  memory.py  network.py  registry.py  temperature.py  weather.py
scripts/: install.sh  layout_preview.py
systemd/: screan.service
tests/: test_colorconv.py  test_config.py  test_rect.py
